// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerBody component when a children is provided should match snapshot 1`] = `
<div
  className="NatDSDrawerBody-root-1 NatDSDrawerBody-root-3"
>
  <div
    className="NatDSDrawerBody-scroll-2"
    onScroll={[Function]}
  >
    <div>
      Custom children
    </div>
  </div>
</div>
`;

exports[`DrawerBody component when children and component are provided should match snapshot 1`] = `
<section
  className="NatDSDrawerBody-root-1 NatDSDrawerBody-root-4"
>
  <div
    className="NatDSDrawerBody-scroll-2"
    onScroll={[Function]}
  >
    <div>
      Custom children
    </div>
  </div>
</section>
`;
